# omengrep

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cli.mojo  hatch_build.py  omendb-review.md  pixi.toml  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
.tasks/: tk-4f2n.json  tk-4oe3.json  tk-7wfk.json  tk-8yhl.json  tk-bb7o.json  tk-h8pv.json  tk-i4b4.json  tk-jw5v.json  tk-kwzw.json  tk-n2yk.json  tk-pbf0.json  tk-uwun.json  tk-we4e.json  tk-zvga.json
ai/: DECISIONS.md  DESIGN-semantic.md  INSTALL_ISSUES.md  KNOWLEDGE.md  PLAN.md  RESEARCH.md  ROADMAP.md  STATUS.md  TODO.md
ai/research/: bge-vs-jina-code.md  competitive-analysis-2026-02.md  competitive-analysis-2026-03.md  mcp-server-guide.md  mgrep-and-code-tokenization.md  mojo_max_reference.md  multi-vector-code-search.md  onnx-model-format-crossplatform.md  onnxruntime-execution-providers.md  optimization-audit-2026-02.md
ai/review/: 2026-02-16-post-02919c5.md  2026-03-03-full-review.md  code-review-2026-01-10.md  code-review-2026-01-17.md  embedder-performance-analysis-2026-01-17.md  optimization-sprint-2026-02-23.md  profile-2026-01-10.md
docs/plans/: 2026-03-03-v0.0.2-release.md
src/: boost.rs  lib.rs  main.rs  synonyms.rs  tokenize.rs  types.rs
src/cli/: build.rs  clean.rs  list.rs  mcp.rs  mod.rs  model.rs  outline.rs  output.rs  search.rs  status.rs
src/embedder/: mod.rs  onnx.rs  tokenizer.rs
src/extractor/: languages.rs  mod.rs  queries.rs  text.rs
src/hygrep/: __init__.py  cli.py  cli_v2.py  embedder.py  extractor.py  mlx_embedder.py  reranker.py  scanner.py  semantic.py
src/index/: manifest.rs  mod.rs  walker.rs
src/inference/: bridge.py  reranker.mojo
src/scanner/: c_regex.mojo  walker.mojo
tests/: cli.rs  test_cli.py  test_context.py  test_golden.py  test_languages.py  test_model_integration.py  test_regex_smoke.mojo  test_reranker.py  test_scanner_fallback.py  test_semantic.py  test_walker.mojo
tests/golden/: auth.py
tools/: origin_probe.mojo
