[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hygrep"
version = "0.0.12"
description = "Semantic code search with automatic indexing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "nijaru" }
]
keywords = ["grep", "search", "code", "cli", "semantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
]
dependencies = [
    "numpy>=1.24",
    "onnxruntime>=1.16",
    "pathspec>=0.11",
    "tokenizers>=0.15",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-bash>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-lua>=0.2",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-elixir>=0.3",
    "tree-sitter-zig>=1.0",
    "tree-sitter-svelte>=1.0",
    "tree-sitter-yaml>=0.7",
    "tree-sitter-toml>=0.7",
    "tree-sitter-json>=0.24",
    "huggingface-hub>=0.20",
    "typer>=0.9",
    "rich>=13.0",
    "omendb>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
hhg = "hygrep.cli:main"
hygrep = "hygrep.cli:main"

[project.urls]
Homepage = "https://github.com/nijaru/hygrep"
Repository = "https://github.com/nijaru/hygrep"

[tool.hatch.build.targets.wheel]
packages = ["src/hygrep"]

[tool.hatch.build.targets.wheel.force-include]
# Include pre-built Mojo extension
# Built with: mojo build src/scanner/_scanner.mojo --emit shared-lib -o src/hygrep/_scanner.so
"src/hygrep/_scanner.so" = "hygrep/_scanner.so"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ty]
# Ignore unresolved imports for optional/dynamic modules
[tool.ty.rules]
unresolved-import = "ignore"  # tomli fallback, _scanner extension
possibly-missing-attribute = "ignore"  # onnxruntime lacks stubs
